# SDL-learning

./: .gitignore  CMakeLists.txt  Sdltest.sln  buildAndRun.ps1  run.ps1
Sdltest/: 01_hello_SDL.cpp  02_image_on_screen.cpp  02_image_on_screen.h  03_events.cpp  03_events.h  04_key_presses.cpp  04_key_presses.h  05_optimized_surface_loading.cpp  05_optimized_surface_loading.h  07_textures.cpp  07_textures.h  09_viewport.h  11_clip_rendering.cpp  11_clip_rendering.h  14_animated_sprites.cpp  17_mouse_events.cpp  17_mouse_events.h  19_gamepads.cpp  20_haptics.cpp  20_haptics.h  21_sfx_and_music.cpp  22_timing.h  23_advanced_timing.cpp  23_advanced_timing.h  25_capping_framerate.h  26_motion.cpp  26_motion.h  27_collision_detection.cpp  27_collision_detection.h  28_per_pixel_collision.cpp  28_per_pixel_collision.h  29_circular_collision.cpp  29_circular_collision.h  30_scrolling.cpp  Dot.cpp  Dot.h  LButton.h  Sdltest.vcxproj  Sdltest.vcxproj.filters  Utils.cpp  (+6 more)
src/: 03_events.cpp  03_events.h  04_key_presses.h  05_optimized_surface_loading.cpp  05_optimized_surface_loading.h  06_extension_libraries.cpp  06_extension_libraries.h  08_primitives.cpp  08_primitives.h  09_viewport.cpp  10_color_keying.cpp  10_color_keying.h  12_color_modulation.cpp  12_color_modulation.h  13_alpha_blending.cpp  13_alpha_blending.h  14_animated_sprites.h  15_rotation.cpp  15_rotation.h  16_ttf.cpp  16_ttf.h  18_key_states.cpp  18_key_states.h  19_gamepads.h  21_sfx_and_music.h  22_timing.cpp  24_framerate.cpp  24_framerate.h  25_capping_framerate.cpp  27_collision_detection.cpp  30_scrolling.cpp  (+16 more)
